
add_custom_target(axxegro_examples ALL)
axxegro_add_copy_resources_command(axxegro_examples "examples/data" "data")
axxegro_add_copy_dlls_command(axxegro_examples "dll" "")

function(axxegro_add_example name)
    add_executable("axx_ex_${name}" "src/${name}.cpp")
    add_dependencies(axxegro_examples "axx_ex_${name}")
    target_link_libraries("axx_ex_${name}" axxegro)
endfunction()


axxegro_add_example("example1")
axxegro_add_example("dvdlogo")
axxegro_add_example("userevents")
axxegro_add_example("vertices")
axxegro_add_example("3dcam")
axxegro_add_example("config")
axxegro_add_example("shader")
axxegro_add_example("fpsmap")
axxegro_add_example("audio")
axxegro_add_example("video")
axxegro_add_example("subbitmap")
axxegro_add_example("benchmark")
axxegro_add_example("microphone")